updates including text; i18next ; avoid jumping nft photo after insterting wallet address

--- a/src/components/NFTAirdrop/NFTAirdrop.scss
+++ b/src/components/NFTAirdrop/NFTAirdrop.scss
@@ -62,6 +62,9 @@
     text-align: center;
     margin: 0 20px;
   }
+  .redeem-container {
+    width: 300px;
+  }
 }
 
 @media only screen and (max-width: $mobile-breakpoint) {
@@ -71,6 +74,9 @@
       margin-right: unset;
       margin-bottom: 30px;
       padding: $modal-element-padding-mobile;
+    }
+    .redeem-container {
+      width: 100%;
     }
   }
 }
