--- a/src/components/NFTAirdrop/Redeem.scss
+++ b/src/components/NFTAirdrop/Redeem.scss
@@ -35,6 +35,10 @@
       color: $red;
     }
   }
+  .redeem-wrapper__already-redeemed-label {
+    color: $red;
+    margin: 15px 0;
+  }
   .action-btn {
     width: 100%;
     margin: 20px 0px;
